[package]
name = "rust_redis"
version = "0.1.0"
authors = ["matth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
order = { path = "./order" }
redis = { path = "./redis" }
trade = { path = "./trade" }
uuid = {version = "0.8.2", features = ["serde", "v4"] }
[dev-dependencies]
