[package]
name = "rust_redis"
version = "0.1.0"
authors = ["matth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
uuid = {version = "0.8.2", features = ["serde", "v4"] }


order = { path = "./order" }
redis = { path = "./redis" }
trade = { path = "./trade" }


[dev-dependencies]
